Made An update to the artist list making them social media links

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 <section class="fade-in-up">
                     <h3 class="font-bungee text-2xl text-cyan-400 text-glow-cyan mb-4">About the Event</h3>
                     <div class="space-y-4 text-slate-300 text-lg leading-relaxed">
-                        <p>Join us as we make Oklahoma cannabis history! As we fight to end prohibition on this sacred plant, come together as a community for a group smoke session and to paint campaign signs for SQ 837, which launches in August.</p>
-                        <p>We're holding a friendly competition for the most beautiful and artistically-driven sign. The winner will receive a special prize of $50! We'll also have live music from an amazing lineup of local artists.</p>
+                        <p>Join us as we make Oklahoma cannabis history! As we fight to end prohibition on this secured plant, come together as a community for a group smoke session and to paint campaign signs for SQ 833, which launches in August.</p>
+                        <p>We're holding a friendly competition for the most beautiful and artistically-driven sign. The winner will receive a special prize! We'll also have live music from an amazing lineup of local artists.</p>
                         <div class="text-center my-6">
                             <span class="font-bungee text-3xl text-amber-400 bg-amber-400/10 border-2 border-amber-400 rounded-lg py-3 px-6 inline-block">!! THIS IS A FREE EVENT !!</span>
                         </div>
@@ -91,16 +91,34 @@
                 </section>
 
                 <!-- Featured Artists Section -->
-                <section class="fade-in-up">
-                    <h3 class="font-bungee text-2xl text-cyan-400 text-glow-cyan mb-6">Featuring Live Music From</h3>
-                    <div class="flex flex-wrap justify-center gap-3 sm:gap-4">
-                        <span class="bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md">André Le'Neire</span>
-                        <span class="bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md">AliTheOnly</span>
-                        <span class="bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md">Sort of Okay</span>
-                        <span class="bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md">Anna Valantine</span>
-                        <span class="bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md">Aaron Sawyer</span>
-                        <span class="bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md">Rebellious Essence</span>
-                        <span class="bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md">Ace The Poet</span>
+                <section class="fade-in-up text-center">
+                    <h3 class="font-bungee text-2xl text-cyan-400 text-glow-cyan mb-2">Featuring Live Music From</h3>
+                    <p class="text-slate-400 mb-6">Click an artist's name to be redirected to their social media!</p>
+                    <div class="flex flex-wrap justify-center items-center gap-4 sm:gap-5">
+                        <!-- Artist with link -->
+                        <a href="https://www.instagram.com/andreleneire?igsh=MWdzeGYxeDl5a2gyMQ%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
+                            André Le'Neire
+                        </a>
+                        <!-- Artist without link (styled as disabled) -->
+                        <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
+                            AliTheOnly
+                        </span>
+                        <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
+                            Sort of Okay
+                        </span>
+                        <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
+                            Anna Valantine
+                        </span>
+                        <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
+                            Aaron Sawyer
+                        </span>
+                        <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
+                            Rebellious Essence
+                        </span>
+                        <!-- Artist with link -->
+                        <a href="https://www.instagram.com/anthon10999/profilecard/?igsh=MTRlNXpkeTMyY2hhaw==" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
+                            Ace The Poet
+                        </a>
                     </div>
                 </section>
 
