had to update another artist social link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <section class="fade-in-up">
                     <h3 class="font-bungee text-2xl text-cyan-400 text-glow-cyan mb-4">About the Event</h3>
                     <div class="space-y-4 text-slate-300 text-lg leading-relaxed">
-                        <p>Join us as we make Oklahoma cannabis history! As we fight to end prohibition on this secured plant, come together as a community for a group smoke session and to paint campaign signs for SQ 833, which launches in August.</p>
+                        <p>Join us as we make Oklahoma cannabis history! As we fight to end prohibition on this sacred plant, come together as a community for a group smoke session and to paint campaign signs for SQ 837, which launches in August.</p>
                         <p>We're holding a friendly competition for the most beautiful and artistically-driven sign. The winner will receive a special prize! We'll also have live music from an amazing lineup of local artists.</p>
                         <div class="text-center my-6">
                             <span class="font-bungee text-3xl text-amber-400 bg-amber-400/10 border-2 border-amber-400 rounded-lg py-3 px-6 inline-block">!! THIS IS A FREE EVENT !!</span>
@@ -99,13 +99,14 @@
                         <a href="https://www.instagram.com/andreleneire?igsh=MWdzeGYxeDl5a2gyMQ%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
                             André Le'Neire
                         </a>
-                        <!-- Artist without link (styled as disabled) -->
-                        <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
+                        <!-- Artist with link -->
+                        <a href="https://www.instagram.com/alitheonlyy?utm_source=ig_web_button_share_sheet&igsh=ejN6cXprcWd3eTVn" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
                             AliTheOnly
-                        </span>
-                        <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
+                        </a>
+                        <!-- Artist with link -->
+                        <a href="https://www.instagram.com/sortofokayband?igsh=MWphOHQzZGp6ejdqeg%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
                             Sort of Okay
-                        </span>
+                        </a>
                         <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
                             Anna Valantine
                         </span>
