had to update some text

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3 class="font-bungee text-2xl text-cyan-400 text-glow-cyan mb-4">About the Event</h3>
                     <div class="space-y-4 text-slate-300 text-lg leading-relaxed">
                         <p>Join us as we make Oklahoma cannabis history! As we fight to end prohibition on this sacred plant, come together as a community for a group smoke session and to paint campaign signs for SQ 837, which launches in August.</p>
-                        <p>We're holding a friendly competition for the most beautiful and artistically-driven sign. The winner will receive a special prize! We'll also have live music from an amazing lineup of local artists.</p>
+                        <p>We're holding a friendly competition for the most beautiful and artistically-driven sign. The winner will receive a special prize of $50! We'll also have live music from an amazing lineup of local artists.</p>
                         <div class="text-center my-6">
                             <span class="font-bungee text-3xl text-amber-400 bg-amber-400/10 border-2 border-amber-400 rounded-lg py-3 px-6 inline-block">!! THIS IS A FREE EVENT !!</span>
                         </div>
