added another artist link

--- a/index.html
+++ b/index.html
@@ -104,12 +104,13 @@
                             AliTheOnly
                         </a>
                         <!-- Artist with link -->
-                        <a href="https://www.instagram.com/sortofokayband?igsh=MWphOHQzZGp6ejdqeg%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
+                        <a href="https://www.instagram.com/blosso.m888?igsh=N20wejMxZmRubnow" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
                             Sort of Okay
                         </a>
-                        <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
+                        <!-- Artist with link -->
+                        <a href="https://www.instagram.com/annavalentine_music?igsh=MW85OXJhOHo3c3JkYg%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
                             Anna Valantine
-                        </span>
+                        </a>
                         <span title="Link coming soon!" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md opacity-60 cursor-not-allowed">
                             Aaron Sawyer
                         </span>
