--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </a>
                         <!-- Artist with link -->
                         <a href="https://www.instagram.com/annavalentine_music?igsh=MW85OXJhOHo3c3JkYg%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
-                            Anna Valantine
+                            Anna Valentine
                         </a>
                         <!-- Artist with link -->
                         <a href="https://www.instagram.com/aaronsawyerofficial?igsh=aWJjdzQzM3pveTFk" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
