add some text to the rsvp section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3 class="font-bungee text-2xl text-cyan-400 text-glow-cyan mb-4">About the Event</h3>
                     <div class="space-y-4 text-slate-300 text-lg leading-relaxed">
                         <p>Join us as we make Oklahoma cannabis history! As we fight to end prohibition on this sacred plant, come together as a community for a group smoke session and to paint campaign signs for SQ 837, which launches in August.</p>
-                        <p>We're holding a friendly competition for the most beautiful and artistically-driven sign. The winner will receive a special prize of $50! We'll also have live music from an amazing lineup of local artists.</p>
+                        <p>We're holding a friendly competition for the most beautiful and artistically-driven sign. The winner will receive a special prize! We'll also have live music from an amazing lineup of local artists.</p>
                         <div class="text-center my-6">
                             <span class="font-bungee text-3xl text-amber-400 bg-amber-400/10 border-2 border-amber-400 rounded-lg py-3 px-6 inline-block">!! THIS IS A FREE EVENT !!</span>
                         </div>
@@ -109,7 +109,7 @@
                         </a>
                         <!-- Artist with link -->
                         <a href="https://www.instagram.com/annavalentine_music?igsh=MW85OXJhOHo3c3JkYg%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
-                            Anna Valentine
+                            Anna Valantine
                         </a>
                         <!-- Artist with link -->
                         <a href="https://www.instagram.com/aaronsawyerofficial?igsh=aWJjdzQzM3pveTFk" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-800 text-white font-bold py-2 px-4 rounded-full shadow-md border-2 border-transparent hover:border-fuchsia-400 hover:scale-105 transform transition-all duration-300 ease-in-out">
@@ -133,7 +133,9 @@
                 <aside class="bg-slate-800/50 rounded-2xl p-6 border border-cyan-500/50 shadow-lg sticky top-8 fade-in-up">
                     <h3 class="font-bungee text-2xl text-center text-cyan-400 text-glow-cyan mb-4">RSVP for the Event</h3>
                     
-                    <p class="text-sm text-slate-300 mb-6 text-center">RSVP to this event by leaving your name, phone number, and message. The message box can be used to communicate any ideas for the event to the event coordinator. All phone numbers will be used in cases of updates and reminders for just this event!</p>
+                    <p class="text-sm text-slate-300 mb-4 text-center">RSVP to this event by leaving your name, phone number, and message. The message box can be used to communicate any ideas for the event to the event coordinator. All phone numbers will be used in cases of updates and reminders for just this event!</p>
+                    
+                    <p class="text-amber-400 font-bold text-center mb-6">RSVP today to be put into a drawing for a "Stand Against Tyranny" T-shirt!</p>
 
                     <form id="rsvp-form" action="https://formspree.io/f/xgvyrlev" method="POST">
                         <div class="space-y-4">
